Issue #58. Identify insufficient physical memory (and swappines).